# technicalDataAnalysis

./: .gitignore  README.md  data.py  feature_extraction.py  features.json  main.py  pyproject.toml  report.ipynb  report.py
.ipynb_checkpoints/: report-checkpoint.ipynb
results/: loss.pkl
results/model_1/: model.keras
results/model_2/: errors.pkl.REMOVED.git-id  loss.pkl  model.keras
results/model_3/: loss.pkl  model.keras
