[tool.poetry]
name = "analysis technical data"
version = "0.1.0"
description = ""
authors = ["Christian Murschall <christian@murschall.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
h5py = "^3.9.0"
numpy = "^1.22"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
tsfel = "^0.1.5"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
